# irpf

./: .codespellrc  .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  alembic.ini  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  tasks.sh
.github/: CODEOWNERS
.github/workflows/: tests.yaml
alembic/: CLAUDE.md  env.py
alembic/versions/: 20260525_1454_7b98ce6f574f_create_b3_tables.py  20260525_1454_8ef63ada69a6_create_irpf_views.py  20260525_1500_86053cd8b1f8_alter_posicao_integer_to_numeric.py  20260525_1612_aca0f615197b_rewrite_irpf_views_legacy_logic.py  20260525_1724_26dad2ebb1dc_add_unique_constraints_annual_report_.py  20260525_1803_ee189da6a711_fix_bon_por_negocio_quantity_.py  20260526_0050_f87f8302d2bc_fix_pm_patr_use_year_end_positions_for_.py
docs/: api.md  architecture.md  index.md
docs/superpowers/plans/: 2026-05-25-declaration-rv-refactor.md
src/: __init__.py  main.py
src/app/: __init__.py  bootstrap.py  container.py
src/capabilities/: __init__.py
src/capabilities/declaration_rv/: __init__.py
src/capabilities/declaration_rv/application/: __init__.py  use_cases.py
src/capabilities/declaration_rv/domain/: __init__.py  dto.py  entities.py  enums.py  ports.py
src/capabilities/declaration_rv/infrastructure/: __init__.py  repositories.py
src/capabilities/example_feature/: __init__.py
src/capabilities/example_feature/application/: __init__.py  factories.py  use_cases.py
src/capabilities/example_feature/domain/: __init__.py  dto.py  entities.py  enums.py  ports.py
src/capabilities/example_feature/infrastructure/: __init__.py  repositories.py
src/capabilities/import_trades/: __init__.py
src/chassis/: __init__.py
src/chassis/db_schema/: __init__.py
src/chassis/typing/: __init__.py  abc_type_checker.py  decorators.py  protocol_type_checker.py  type_checker.py  validate.py
src/config/: __init__.py  emails.yaml  inputs.yaml  outputs.yaml  startup.py  webhooks.yaml
src/config/signatures/: default.html
src/utils/: __init__.py
tests/unit/: test_generate_declaration.py  test_import_trades.py  test_placeholder.py
(+18 files in other folders)
