[tool.poetry]
name = "irpf"
version = "0.0.1"
description = ""
authors = []
readme = "README.md"
license = "MIT"
homepage = "https://example.com/irpf"
repository = "https://github.com/guilhermegor/irpf"
keywords = ["python"]
package-mode = false
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.poetry.urls]
"Bug Reports" = "https://github.com/guilhermegor/irpf/issues"
"Source" = "https://github.com/guilhermegor/irpf"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
python-dotenv = ">=1.0.0"
sqlalchemy = ">=2.0"
stpstone = ">=3.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=4.1.0"
pretty-errors = ">=1.2.25"
commitizen = ">=4.4.1"
poetry-plugin-export = ">=1.8"

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.6.0"
mkdocs-material = ">=9.5.0"
pymdown-extensions = ">=10.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
